--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -9,13 +9,46 @@
   filter: drop-shadow($x $y $blur $color);
 }
 
-@mixin hidden-scrollbar() {
+@mixin mobile-scrollbar() {
   -ms-overflow-style: -ms-autohiding-scrollbar;
   -webkit-overflow-scrolling: touch;
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
+}
 
+@mixin desktop-scrollbar() {
   &::-webkit-scrollbar {
-    display: none;
+    width: 2px;
+    height: 6px;
   }
+
+  &::-webkit-scrollbar-track {
+    background: transparent;
+  }
+}
+
+@mixin desktop-scrollbar-light() {
+  @include desktop-scrollbar();
+
+  &::-webkit-scrollbar-thumb {
+    background: #cbdaf1;
+    border-radius: 5px;
+  }
+
+  // &::-webkit-scrollbar-thumb:hover {
+  //   background: #555;
+  // }
+}
+
+@mixin desktop-scrollbar-dark() {
+  @include desktop-scrollbar();
+
+  &::-webkit-scrollbar-thumb {
+    background: #35393e;
+    border-radius: 5px;
+  }
+
+  // &::-webkit-scrollbar-thumb:hover {
+  //   background: #555;
+  // }
 }
