--- a/styles/pages/_order.scss
+++ b/styles/pages/_order.scss
@@ -10,7 +10,7 @@
 
     .ordered-items-container {
       overflow-y: auto;
-      @include hidden-scrollbar;
+      @include mobile-scrollbar;
     }
 
     .empty-order {
